--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,5 +12,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - run: npm ci
       - name: Deploy
         run: make deploy
